--- a/Customer_Segementation.ipynb
+++ b/Customer_Segementation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0RglKRE6swSjkGvjVn/Kb",
+      "authorship_tag": "ABX9TyPwt9gs5Ehf6KMf/ZjBnr4U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Problem Statement\n",
+        "# Problem Definition\n",
         "'''\n",
         "Customer Segmentation Data Science project aims to categorize a company's customer base into distinct groups to enhance understanding of their\n",
         "behaviors and preferences. We begin by collecting and cleaning customer data from various sources. Through exploratory data analysis (EDA), we identify key patterns and trends.\n",
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,7 +88,7 @@
         "id": "KpwPwTVrYhCc",
         "outputId": "d264afa6-d414-4d0f-db55-2e97811bf2c6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -518,7 +518,7 @@
         "id": "spESmG51f6OY",
         "outputId": "99fb50f5-9e64-4d39-f9f5-430e1d8af26c"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -554,7 +554,7 @@
         "id": "Ceq--j5td4vt",
         "outputId": "2356bef5-e96a-46c2-ec5d-260ebb8b43ce"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -622,7 +622,7 @@
         "id": "zV_6MU8ieX-P",
         "outputId": "c3909ba6-933b-4b93-9c6f-f7cf8945e59a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -682,7 +682,7 @@
       "metadata": {
         "id": "E9j9Ep7repXB"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -719,7 +719,7 @@
         "id": "0C0Fq6ike66k",
         "outputId": "1ed53d17-7e05-401e-e83f-b07df24cfe39"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -758,7 +758,7 @@
         "id": "t_JjvwgxhuSY",
         "outputId": "5eba8c15-15d2-4fb6-9dde-1b5c3794cdbc"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
